SERVER-66047 Fix the shell's exhaust impl to work with limit